update project to dotnet core 2.2

--- a/Src/TraefikPreConfiguratorWindows/TraefikPreConfiguratorWindows.csproj
+++ b/Src/TraefikPreConfiguratorWindows/TraefikPreConfiguratorWindows.csproj
@@ -1,63 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E6535D6-EE3E-4C71-B75D-1858C4FD9ADB}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TraefikPreConfiguratorWindows</RootNamespace>
-    <AssemblyName>TraefikPreConfiguratorWindows</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <CodeAnalysisRuleSet>..\..\Build\Analyzers.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\$(Configuration)\TraefikPreConfiguratorWindows.xml</DocumentationFile>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <PackageTags>ServiceFabric Traefik</PackageTags>
+    <PackAsTool>true</PackAsTool>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/SoCreate/PreConfiguratorForTraefikOnServiceFabric/master/LICENSE</PackageLicenseUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/SoCreate/PreConfiguratorForTraefikOnServiceFabric</RepositoryUrl>
+    <Description>Allows per environment configuration of Traefik on Service Fabric.</Description>
   </PropertyGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\..\Build\stylecop.json" Link="stylecop.json" />
-  </ItemGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CallInfo.cs" />
-    <Compile Include="CertHelpers.cs" />
-    <Compile Include="CertificateHandler.cs" />
-    <Compile Include="CommandOptionExtensions.cs" />
-    <Compile Include="ExitCode.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AsyncUsageAnalyzers">
@@ -70,6 +24,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.KeyVault">
       <Version>3.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication">
+      <Version>1.0.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers">
       <Version>2.6.2</Version>
@@ -89,16 +46,26 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="OpenSSL\HashInfo.txt" />
-    <Content Include="OpenSSL\HowToDownloadOpenSSL.txt" />
-    <Content Include="OpenSSL\libeay32.dll" />
-    <Content Include="OpenSSL\OpenSSL License.txt" />
-    <Content Include="OpenSSL\openssl.exe" />
-    <Content Include="OpenSSL\ReadMe.txt" />
-    <Content Include="OpenSSL\ssleay32.dll" />
+    <Content Include="OpenSSL\HashInfo.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="OpenSSL\HowToDownloadOpenSSL.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="OpenSSL\libeay32.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="OpenSSL\OpenSSL License.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="OpenSSL\openssl.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="OpenSSL\ReadMe.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="OpenSSL\ssleay32.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>xcopy /I /Y $(MSBuildThisFileDirectory)OpenSSL $(MSBuildThisFileDirectory)bin\$(Configuration)</PostBuildEvent>
-  </PropertyGroup>
 </Project>
